--- a/index.html
+++ b/index.html
@@ -393,6 +393,12 @@
             <div class="caption">Fanvatar</div>
           </a>
         </div>
+        <div class="catalogue-item style1 image noengsub" >
+          <a class="frame" href="#pineapple">
+            <img alt="" src="assets/images/pineapple_cover.jpg" loading="lazy"/>
+            <div class="caption">Pineapple Studio</div>
+          </a>
+        </div>
         </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1629,6 +1635,22 @@
                 <p>BAE173 answer interview questions and give their TMI while promoting JAWS.</p>
                 <div class="button2-container">
                     <a href="https://www.youtube.com/watch?v=9robjDdlRtE&list=PLNLe5nyr31ICHbxzS18W-MoVxJsP0Efy4&index=1" class="button2">Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="pineapple-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/pineapple_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Fanvatar</h1>
+                <p>BAE173 answer interview questions, perform their song JAWS and give their TMI.</p>
+                <div class="button2-container">
+                    <a href="https://youtube.com/playlist?list=PLNLe5nyr31IAAJUn5DkerPXDAXFCzUqQ8&si=CL0K4-y_LftRiXUU" class="button2">Youtube Playlist</a>
                 </div>                
               </div>
           </div>
