--- a/index.html
+++ b/index.html
@@ -1647,10 +1647,11 @@
         <div class="bckgndimage-container">
             <img src="assets/images/pineapple_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
             <div class="overlay-content">
-                <h1>Fanvatar</h1>
+                <h1>Pineapple Studio</h1>
                 <p>BAE173 answer interview questions, perform their song JAWS and give their TMI.</p>
                 <div class="button2-container">
-                    <a href="https://youtube.com/playlist?list=PLNLe5nyr31IAAJUn5DkerPXDAXFCzUqQ8&si=CL0K4-y_LftRiXUU" class="button2">Youtube Playlist</a>
+                    <a href="https://youtu.be/aoTSBP29gMo?feature=shared" class="button2">BAE173 DAISO Haul</a>
+                    <a href="https://youtube.com/playlist?list=PLNLe5nyr31IAAJUn5DkerPXDAXFCzUqQ8&si=CL0K4-y_LftRiXUU" class="button2">Full Youtube Playlist</a>
                 </div>                
               </div>
           </div>
