youtube appearances almost done

--- a/index.html
+++ b/index.html
@@ -405,6 +405,24 @@
             <div class="caption">hey presto TV</div>
           </a>
         </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#kpopstar">
+            <img alt="" src="assets/images/kpopstar_cover.jpg" loading="lazy"/>
+            <div class="caption">K-Pop Star Showcase</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#mubeatlive">
+            <img alt="" src="assets/images/mubeatlive_cover.jpg" loading="lazy"/>
+            <div class="caption">Mubeat Live</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#ifland">
+            <img alt="" src="assets/images/ifland_cover.jpg" loading="lazy"/>
+            <div class="caption">Ifland K-Pop Show</div>
+          </a>
+        </div>
         </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1671,10 +1689,60 @@
             <img src="assets/images/heypresto_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
             <div class="overlay-content">
                 <h1>Hey Presto</h1>
-                <p>Watch the May 1 2022 Tottenham V Leicester City game with Muzin and J-Min!</p>
+                <p>Watch the Tottenham V Leicester City soccer game from May 1st 2022 with Muzin and J-Min!</p>
                 <div class="button2-container">
                     <a href="https://www.youtube.com/live/OWxJtRyZIM4?feature=shared" class="button2">Youtube Live</a>
                     <a href="https://youtube.com/playlist?list=PLdIJA2GFN-r3M_X4CdWQKhivwO4rhutTD&si=HWaBeAPgGZ3P3-Ek" class="button2">Full Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="kpopstar-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/kpopstar_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>K-POP Star Showcase</h1>
+                <p>BAE173 answer interview questions and teach the main choreography for GT!</p>
+                <div class="button2-container">
+                    <a href="https://youtu.be/qZuDsfkdFVI?si=6e-T7-YQamrJ4hh-" class="button2">Youtube Video Link</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="mubeatlive-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/mubeatlive_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Mubeat Live</h1>
+                <p>BAE173 answer interview questions and play variety style games in a live show!</p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=P5Ck3jayncc" class="button2">Youtube Video Link</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="ifland-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/ifland_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Ifland K-Pop Show</h1>
+                <p>BAE173 play variety style games in smaller groups. The challenges include dance challenges, tiktok challenges, trivia and more! </p>
+                <div class="button2-container">
+                    <a href="https://youtu.be/9anbpp7MqXw?feature=shared" class="button2">Junseo, Bit, J-Min and Muzin</a>
+                    <a href="https://youtu.be/Hg9O1LgxN2s?feature=shared" class="button2">J-Min, Hangyul, Yoojun and Youngseo</a>
+                    <a href="https://www.youtube.com/playlist?list=PLHTheVE9BNQaZQLl8LTqqezRGveRja04m" class="button2">Youtube Playlist</a>
                 </div>                
               </div>
           </div>
