--- a/index.html
+++ b/index.html
@@ -411,13 +411,13 @@
             <div class="caption">K-Pop Star Showcase</div>
           </a>
         </div>
-        <div class="catalogue-item style1 image" >
+        <div class="catalogue-item style1 image noengsub" >
           <a class="frame" href="#mubeatlive">
             <img alt="" src="assets/images/mubeatlive_cover.jpg" loading="lazy"/>
             <div class="caption">Mubeat Live</div>
           </a>
         </div>
-        <div class="catalogue-item style1 image" >
+        <div class="catalogue-item style1 image noengsub" >
           <a class="frame" href="#ifland">
             <img alt="" src="assets/images/ifland_cover.jpg" loading="lazy"/>
             <div class="caption">Ifland K-Pop Show</div>
