--- a/index.html
+++ b/index.html
@@ -414,13 +414,25 @@
         <div class="catalogue-item style1 image noengsub" >
           <a class="frame" href="#mubeatlive">
             <img alt="" src="assets/images/mubeatlive_cover.jpg" loading="lazy"/>
-            <div class="caption">Mubeat Live</div>
+            <div class="caption">Mubeat</div>
           </a>
         </div>
         <div class="catalogue-item style1 image noengsub" >
           <a class="frame" href="#ifland">
             <img alt="" src="assets/images/ifland_cover.jpg" loading="lazy"/>
             <div class="caption">Ifland K-Pop Show</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#anirollz">
+            <img alt="" src="assets/images/anirollz_cover.jpg" loading="lazy"/>
+            <div class="caption">Anirollz</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image noengsub" >
+          <a class="frame" href="#ganghwa">
+            <img alt="" src="assets/images/ganghwa_cover.jpg" loading="lazy"/>
+            <div class="caption">Ganghwa Gallery</div>
           </a>
         </div>
         </div>
@@ -1721,10 +1733,11 @@
         <div class="bckgndimage-container">
             <img src="assets/images/mubeatlive_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
             <div class="overlay-content">
-                <h1>Mubeat Live</h1>
-                <p>BAE173 answer interview questions and play variety style games in a live show!</p>
+                <h1>Mubeat</h1>
+                <p>BAE173 answer interview questions and play variety style games on the Mubeat channel</p>
                 <div class="button2-container">
-                    <a href="https://www.youtube.com/watch?v=P5Ck3jayncc" class="button2">Youtube Video Link</a>
+                    <a href="https://www.youtube.com/watch?v=P5Ck3jayncc" class="button2">2022 Live Fanmeeting</a>
+                    <a href="https://www.youtube.com/watch?v=P5Ck3jayncc" class="button2">2024 Drawing Game</a>
                 </div>                
               </div>
           </div>
@@ -1743,6 +1756,38 @@
                     <a href="https://youtu.be/9anbpp7MqXw?feature=shared" class="button2">Junseo, Bit, J-Min and Muzin</a>
                     <a href="https://youtu.be/Hg9O1LgxN2s?feature=shared" class="button2">J-Min, Hangyul, Yoojun and Youngseo</a>
                     <a href="https://www.youtube.com/playlist?list=PLHTheVE9BNQaZQLl8LTqqezRGveRja04m" class="button2">Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="anirollz-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/anirollz_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Anirollz</h1>
+                <p>Hangyul and Doha make strawberry roll cake together.</p>
+                <div class="button2-container">
+                    <a href="https://youtu.be/FdG8nWLxtqw?si=5XRiRTa5k9ZWVzTZ" class="button2">Watch on Youtube</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="ganghwa-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/ganghwa_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Ganghwa Gallery</h1>
+                <p>Hangyul and Doha visit an interactive art gallery together.</p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=pYQbUrlz12o" class="button2">Watch on Youtube</a>
                 </div>                
               </div>
           </div>
